--- a/src/style.css
+++ b/src/style.css
@@ -13,80 +13,19 @@
   --color-text-brown: #3b2d23;
 }
 
-body {
-  background-color: var(--color-dark-brown);
-  color: var(--color-text-white);
-
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
-}
-
 a {
   text-decoration: none;
-}
-
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-}
-
-#app {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+  color: #1fa4a0;
 }
 
 .logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em var(--color-accent-teal));
-}
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  font-weight: 700;
 }
 
-.hero-section {
-  margin: 0 auto;
-  padding: 188px 0;
-  max-width: 1440px;
-  background-image: linear-gradient(to bottom, #3a2b23b3, #3a2b23b3),
-    url(./assets/images/hero.jpg);
-  background-repeat: no-repeat;
-  background-size: cover;
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+.logo small {
+  font-size: xx-small;
 }
