style main section

--- a/src/assets/css/roots.css
+++ b/src/assets/css/roots.css
@@ -5,6 +5,7 @@
   /* font-family: "Lobster", sans-serif; */
   --color-background-first: #e7d7c4;
   --color-background-second: #3a2b23;
+  --color-background-second-07: #3a2b23b3;
   --color-text-first: #3b2d23;
   --color-text-second: #ffffff;
   --color-accent: #1fa4a0;
