edit and style about section

--- a/src/style.css
+++ b/src/style.css
@@ -2,3 +2,4 @@
 @import url(/src/assets/css/basic-styles.css);
 @import url(/src/assets/css/header.css);
 @import url(/src/assets/css/main-section.css);
+@import url(/src/assets/css/about.css);
