--- a/src/assets/css/basic-styles.css
+++ b/src/assets/css/basic-styles.css
@@ -53,6 +53,14 @@ button {
   margin: 0 auto;
 }
 
+.section-title {
+  font-weight: 500;
+  font-size: 28px;
+  line-height: 1.14286;
+  letter-spacing: -0.04em;
+  text-align: center;
+}
+
 @media screen and (min-width: 375px) {
   .container {
     width: 375px;
