--- a/src/assets/css/main-section.css
+++ b/src/assets/css/main-section.css
@@ -14,24 +14,26 @@
 }
 
 .main-title {
-  font-size: 28px;
-  line-height: 1.11;
+  font-weight: 500;
+  font-size: 36px;
+  line-height: 1.1;
+  letter-spacing: -0.04em;
   padding: 0 80px;
   text-align: center;
 }
 
 .main-subtitle {
   font-weight: 400;
-  font-size: 12px;
+  font-size: 14px;
   line-height: 1.28571;
   letter-spacing: -0.02em;
   text-align: center;
-  margin: 30px;
+  margin: 40px;
 }
 
 .main-button {
   font-weight: 400;
-  font-size: 12px;
+  font-size: 14px;
   line-height: 1.28571;
   letter-spacing: -0.02em;
   border: none;
@@ -42,4 +44,5 @@
   display: block;
   margin: 0 auto;
   max-width: 180px;
+  text-align: center;
 }
