--- a/src/assets/css/basic-styles.css
+++ b/src/assets/css/basic-styles.css
@@ -61,6 +61,11 @@ button {
   text-align: center;
 }
 
+.icon-container {
+  display: flex;
+  justify-content: center;
+}
+
 @media screen and (min-width: 375px) {
   .container {
     width: 375px;
