--- a/src/assets/css/header.css
+++ b/src/assets/css/header.css
@@ -15,16 +15,19 @@
   padding: 8px;
 }
 
-.menu-button {
+.menu-button,
+.menu-close-btn {
   border: none;
   background: transparent;
   stroke: var(--color-text-first);
+  fill: var(--color-text-first);
   padding: 8px;
 }
 
-.menu-icon {
-  width: 30px;
-  height: 30px;
+.menu-icon,
+.menu-close-icon {
+  width: 32px;
+  height: 22px;
 }
 
 .conversation-link {
@@ -36,4 +39,10 @@
 .conversation-icon {
   width: 40px;
   height: 40px;
+}
+
+.mobile-navigation {
+  position: fixed;
+  top: 0;
+  right: 0;
 }
