--- a/src/assets/css/header.css
+++ b/src/assets/css/header.css
@@ -41,8 +41,34 @@
   height: 40px;
 }
 
+.mobile-nav-back {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  background: rgba(18, 18, 18, 0.4);
+}
+
 .mobile-navigation {
   position: fixed;
   top: 0;
   right: 0;
+  background: var(--color-background-first);
+  border: 1px solid var(--color-background-second);
+  z-index: 10;
+}
+
+.menu-close-btn {
+  position: fixed;
+  right: 0;
+}
+
+.mobile-navigation nav {
+  padding-block: 100px;
+  padding-inline: 40px;
+}
+
+.mobile-navigation li {
+  padding-block: 10px;
 }
